--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "github>platform-engineering-org/.github"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [".devcontainer/devcontainer.json"],
+      "matchStrings": [
+        "\"image\": \"(?<depName>mcr.microsoft.com/vscode/devcontainers/base):(?<currentValue>.*)\""
+      ],
+      "datasourceTemplate": "docker"
+    }
   ]
 }
