Exit if go.sum file doesn't exists

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,6 @@
 	"name": "renovate-gomod-manager",
 	"image": "mcr.microsoft.com/devcontainers/go:0-1.19-bullseye",
     "mounts": [
-        "source=${localEnv:HOME}/repos/github.com/lmilbaum/crc-cloud,target=/workspace,type=bind,consistency=cached"
+        "source=${localEnv:WORKSPACE},target=/workspace,type=bind,consistency=cached"
     ]
 }
